org.eclipse.jdt.ui.tests.refactoring/resources/InlineMethodWorkspace/TestCases/invalid/TestRecursion.java
package invalid;

public class TestRecursion {
	public void main() {
		/*]*/foo();/*[*/
	}
	
	public void foo() {
		foo();
	}
}
